ISPN-12158 Remove getListeners() from Cache and DefaultCacheManager